fix svg: align to baseline, try to pass # as-is to ionicon

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -231,5 +231,4 @@
 
 .markdown-content ion-icon {
     height: 1em;
-    vertical-align: middle;
 }
